@@ -5,4 +5,5 @@ module.exports = (app) => {
   app.use(mount('/', require('./resources/base')))
   app.use(mount(`/v${config.majorVersion}/orders`, require('./resources/orders')))
   app.use(mount(`/v${config.majorVersion}/items`, require('./resources/items')))
+  app.use(mount(`/v${config.majorVersion}/customers`, require('./resources/customers')))
 }
